first working code

--- a/index.html
+++ b/index.html
@@ -5,52 +5,45 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Salah Companion</title>
+        <link href="css/style.css" rel="stylesheet" />
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <script src="js/app.js"></script>
     </head>
     <body>
-        <div id="salah-niyath">Wait 10 seconds</div>
-        <div id="one-fathiha">Fathiha</div>
-        <div id="one-surah">
-            <p>Surah-Yaseen</p>
-            <p>From aya 1</p>
-            <p>To aya 5</p>
-        </div>
-        <div id="salah-ruku-sujud">Wait 30 seconds</div>
-        <div id="two-fathiha"></div>
-        <div id="two-surah">
-                <p>Surah Al-Qadar</p>
-                <p>From aya 1</p>
-                <p>To aya 5</p>
+        <div>
+            <span>Recitations</span>
+            <select id="list-recitation">
+                <option value="Abdul_Basit_Murattal_64kbps" selected="true">Abdul Basit Murattal</option>
+                <option value="AbdulSamad_64kbps_QuranExplorer.Com">Abdul Samad</option>
+                <option value="Abdullah_Basfar_192kbps">Abdullah Basar</option>
+            </select> 
         </div>
         <div>
-        <button onclick="beginSalah()" type="button">Play</button>
+            <span>Niyath wait time</span>
+            <select id="list-niyath-time"></select><span>Seconds</span> 
         </div>
-
-        <script>
-            var myAudio = document.createElement('audio');
-            var audioSourceBaseUrl = 'https://everyayah.com/data/Abdul_Basit_Murattal_64kbps/';
-            function beginSalah() { 
-                i = 0;
-                var playlist = new Array('001000.mp3', '001001.mp3', '001002.mp3','001003.mp3','001004.mp3','001005.mp3','001006.mp3','001007.mp3');
-
-                myAudio.addEventListener('ended', function () {
-                    i = ++i;
-                    if(i == playlist.length){
-                        myAudio.pause();
-                        return;
-                    }
-                    console.log(i)
-                    myAudio.src = audioSourceBaseUrl + playlist[i];
-                    myAudio.play();
-                }, true);
-                myAudio.loop = false;
-                myAudio.src = audioSourceBaseUrl + playlist[0];
-                myAudio.play();
-            } 
-            function playAudio(sourceFile)
-            {
-                myAudio.setAttribute('src',sourceFile);
-                myAudio.play(); 
-            }
-        </script>
+        <div id="first-fathiha">Fathiha</div>
+        <div>
+            <p>
+                <span>Surah:</span><select id="first-surah-list"></select>
+                <span>From Ayah:</span><select id="first-surah-list-start"></select>
+                <span>To Ayah:</span><select id="first-surah-list-end"></select>
+            </p>
+        </div>
+        <div>
+            <span>Rukhu and Sujud wait time</span>
+            <select id="list-ruku-time"></select><span>Seconds</span> 
+        </div>
+        <div id="second-fathiha">Fathiha</div>
+        <div>
+                <p>
+                    <span>Surah:</span><select id="second-surah-list"></select>
+                    <span>From Ayah:</span><select id="second-surah-list-start"></select>
+                    <span>To Ayah:</span><select id="second-surah-list-end"></select>
+                </p>
+            </div>
+        <div>
+        <button onclick="beginSalah()" type="button">Begin Salah</button>
+        </div>
     </body>
 </html>
