--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     </div>
                 </li>
                 <li class="buttons">
-                    <button onclick="beginSalah()" class="button_text" type="button">Begin Salah</button>
+                    <button id="beginSalahBtn" onclick="beginSalah()" class="button_text" type="button">Begin Salah</button>
 
                 </li>
             </ul>
