--- a/index.html
+++ b/index.html
@@ -33,18 +33,17 @@
                 </select>
             </div>
             <div class="form-group">
-                <label>Niyath wait time</label>
+                <label>Niyath wait time:</label>
                 <select id="list-niyath-time" class="form-control"></select><span>Seconds</span>
             </div>
             <div class="form-group">
-                <label>Al-Faatiha</label>
+                <label>Al-Faatiha:</label>
                 <select class="form-control">
                     <option>Al-Faatiha</option>
                 </select>
             </div>
             <div class="form-group">
-                <label>First Rakath Surah</label>
-
+                <label>First Rakath Surah:</label>
                 <select id="first-surah-list" class="form-control"></select>
                 <div class="subrow">
                     From Ayah:<select id="first-surah-list-start" class="element select small"></select>
@@ -52,19 +51,18 @@
                 </div>
             </div>
             <div class="form-group">
-                <label>Rukhu and Sujud wait time</label>
+                <label>Rukhu and Sujud wait time:</label>
                 <select id="list-ruku-time" class="form-control"></select><span>Seconds</span>
             </div>
             <div class="form-group">
-                <label>Al-Faatiha</label>
+                <label>Al-Faatiha:</label>
                 <select class="form-control">
                     <option>Al-Faatiha</option>
                 </select>
             </div>
             <div class="form-group">
-                <label>Second Rakath Surah</label>
+                <label>Second Rakath Surah:</label>
                 <div>
-
                     <select id="second-surah-list" class="form-control"></select>
                     <div class="subrow">
                         From Ayah:<select id="second-surah-list-start" class="element select small"></select>
