added reciter Saood As-Shuraym

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <option value="Abdullah_Basfar_192kbps">Abdullah Basar</option>
                     <option value="Abdurrahmaan_As-Sudais_64kbps">Abdurrahmaan As-Sudais</option>
                     <option value="Husary_64kbps">Husary</option>
+                    <option value="Saood_ash-Shuraym_64kbps">Saood As-Shuraym</option>
                 </select>
             </div>
             <div class="form-group">
